--- a/mariner_tcpdump_ds.yaml
+++ b/mariner_tcpdump_ds.yaml
@@ -3,7 +3,7 @@
 #
 # Based on https://github.com/amjadaljunaidi/tcpdump however only using yaml
 # Doesn't require Helm and uses Azure Linux(Mariner) image from Microsoft Artifcat Registry(MCR)
-# Should work on more restricted egress cluster since only requires access to Microsoft MCR(mcr.microsoft.com) and Azure Linux Packages(packages.microsoft.com)
+# Should work on more restricted egress AKS clusters since only requires access to Microsoft MCR(mcr.microsoft.com) and Azure Linux Packages(packages.microsoft.com)
 # A PV/PVC share will be created on the AKS cluster default storage account that then can be browsed usning Azure Portal on cluster MC_ Resource Group
 #
 # Install and run: kubectl apply -f mariner_tcpdump_ds.yaml
