--- a/mariner_tcpdump_ds.yaml
+++ b/mariner_tcpdump_ds.yaml
@@ -1,22 +1,40 @@
 #
-# Daemon Set to collect tcpdump cap files on each AKS cluster node
+# DaemonSet to collect tcpdump capture files on each AKS cluster node
 #
 # Based on https://github.com/amjadaljunaidi/tcpdump however only using yaml
 # Doesn't require Helm and uses Azure Linux(Mariner) image from Microsoft Artifcat Registry(MCR)
 # Should work on more restricted egress AKS clusters since only requires access to Microsoft MCR(mcr.microsoft.com) and Azure Linux Packages(packages.microsoft.com)
-# A PV/PVC share will be created on the AKS cluster default storage account that then can be browsed usning Azure Portal on cluster MC_ Resource Group
+# A PV/PVC share will be created on the AKS cluster default storage account that then can be browsed on cluster "MC_" Resource Group using Azure Portal
 #
-# Install and run: kubectl apply -f mariner_tcpdump_ds.yaml
-# Uninstall: kubectl delete -f mariner_tcpdump_ds.yaml
+# INSTALL and RUN: kubectl apply -f https://github.com/josecaneira/aks-lab/raw/main/mariner_tcpdump_ds.yaml
 #
-# PV needs to be patched so that it would be retained after Daemnon Set delete:
+# PV needs to be patched so that it would be retained after DaemnonSet delete:
 #     1st Identify PV: kubectl get pv|grep tcpdump
 #     2nd Patch PV: kubectl patch pv <pv_name>  -p "{\"spec\":{\"persistentVolumeReclaimPolicy\":\"Retain\"}}"
 #
+# STOP and UNINSTALL: kubectl delete -f https://github.com/josecaneira/aks-lab/raw/main/mariner_tcpdump_ds.yaml
+#
 # Special thanks to Amjad Aljunaidi
 #
-# TODO: Implement some kind of cutomization on tcpdump options
+# Version: 1.1
+# CHANGELOG:
+#     11/08/2023:
+#         Initial release.
+#     12/08/2023:
+#         Insert of a ConfigMap with source(SRC) and destination(DST) variables to filter the tcpdump, update line 34 and/or 36 on the data section of the ConfigMap to use filtering;
+#         Posibility to run tcpdump only on a specific node, uncomment line 135 on nodeSelector section and personalize it with your own node hostname.
+# TODO: Suggestions and feedback is welcomed.
 #
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: tcpdump
+data:
+  # Use SRC variable below to filter the tcpdump source(s)
+  SRC: ""
+  # Use DST variable below to filter the tcpdump destination(s)
+  DST: ""
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -56,24 +74,47 @@ spec:
         app.kubernetes.io/name: tcpdump
     spec:
       containers:
-      - command:
+      - name: tcpdump
+        command:
         - bash
         - -c
         - |
           mkdir -p /root/tcpdump && tdnf install tcpdump -y
-          /usr/sbin/tcpdump -n -s 0 -C 500 -W 15 -tttt  -w /root/tcpdump/"$NODE_NAME ""$(date +"%Y_%m_%d_%I_%M_%p").cap"
+          if [ -z "$SRC" ] && [ -z "$DST" ]; then
+            echo "Empty SRC and DST"
+            /usr/sbin/tcpdump -n -s 0 -C 500 -W 15 -tttt -w /root/tcpdump/"$NODE_NAME ""$(date +"%Y_%m_%d_%I_%M_%p").cap"
+          elif [ ! -z "$SRC" ] && [ -z "$DST" ]; then
+            echo "SRC: ${SRC}"
+            /usr/sbin/tcpdump -n -s 0 -C 500 -W 15 -tttt src ${SRC} -w /root/tcpdump/"$NODE_NAME ""$(date +"%Y_%m_%d_%I_%M_%p").cap"
+          elif [ -z "$SRC" ] && [ ! -z "$DST" ]; then
+            echo "DST: ${DST}"
+            /usr/sbin/tcpdump -n -s 0 -C 500 -W 15 -tttt dst ${DST} -w /root/tcpdump/"$NODE_NAME ""$(date +"%Y_%m_%d_%I_%M_%p").cap"
+          else
+            echo "SRC: ${SRC}"
+            echo "DST: ${DST}"
+            /usr/sbin/tcpdump -n -s 0 -C 500 -W 15 -tttt src ${SRC} and dst ${DST} -w /root/tcpdump/"$NODE_NAME ""$(date +"%Y_%m_%d_%I_%M_%p").cap"
+          fi
         env:
         - name: NODE_NAME
           valueFrom:
             fieldRef:
               apiVersion: v1
               fieldPath: spec.nodeName
+        - name: SRC
+          valueFrom:
+            configMapKeyRef:
+              name: tcpdump 
+              key: SRC
+        - name: DST
+          valueFrom:
+            configMapKeyRef:
+              name: tcpdump 
+              key: DST
         image: mcr.microsoft.com/cbl-mariner/base/core:2.0
         imagePullPolicy: IfNotPresent
-        name: tcpdump
         resources:
           limits:
-            cpu: 100m
+            cpu: 500m
             memory: 400Mi
           requests:
             cpu: 100m
@@ -90,6 +131,8 @@ spec:
       hostPID: true
       nodeSelector:
         kubernetes.io/os: linux
+        # Uncomment the line bellow to only run tcpdump on a specific node
+        #kubernetes.io/hostname: aks-marinerpool-40174192-vmss000000
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
@@ -98,6 +141,9 @@ spec:
       - name: tcpdump
         persistentVolumeClaim:
           claimName: tcpdump
+      - name: config
+        configMap:
+          name: tcpdump
   updateStrategy:
     rollingUpdate:
       maxSurge: 0
