--- a/tcpdump_daemonset/tcpdump_ds.yaml
+++ b/tcpdump_daemonset/tcpdump_ds.yaml
@@ -6,6 +6,8 @@
 # Should work on more restricted egress AKS clusters since only requires access to Microsoft MCR(mcr.microsoft.com) and Azure Linux Packages(packages.microsoft.com)
 # A PV/PVC share will be created on the AKS cluster default storage account that then can be browsed on cluster "MC_" Resource Group using Azure Portal
 #
+# Special thanks to Amjad Aljunaidi
+#
 # INSTALL and RUN: kubectl apply -f https://github.com/josecaneira/aks-lab/raw/main/tcpdump_daemonset/tcpdump_ds.yaml
 #
 # PV needs to be patched so that it would be retained after DaemnonSet delete:
@@ -14,7 +16,12 @@
 #
 # STOP and UNINSTALL: kubectl delete -f https://github.com/josecaneira/aks-lab/raw/main/tcpdump_daemonset/tcpdump_ds.yaml
 #
-# Special thanks to Amjad Aljunaidi
+# Customize usage:
+#    wget https://github.com/josecaneira/aks-lab/raw/main/tcpdump_daemonset/tcpdump_ds.yaml
+#    Edit the "tcpdump_ds.yaml" file and change the configmap variables or whatever you want
+#    Deploy/RUN with: kubectl apply -f tcpdump_ds.yaml
+#    Patch the PV as described above, so that it doesn't get deleted when you delete/stop the deployment
+#    Delete/STOP with: kubectl delete -f tcpdump_ds.yaml
 #
 # Version: 1.1.2
 # CHANGELOG:
@@ -29,7 +36,7 @@
 #         Moved tcpdump to it's own directory tcpdump_daemonset and renamed to tcpdump_ds.yaml
 #         Added support so that you can change the filter operator when both "SRC" and "DST" are set. Accepted values are "or", "OR", "and" and "AND", if empty defaults to "and".
 #
-# TODO: Add support to filter by interface name. Other suggestions and feedback is welcomed.
+# TODO: Add support to filter by interface name on João Pedrosa suggestion. Other suggestions and feedback is welcomed.
 #
 apiVersion: v1
 kind: ConfigMap
