Cosmetic changes on changelog

--- a/tcpdump_daemonset/tcpdump_ds.yaml
+++ b/tcpdump_daemonset/tcpdump_ds.yaml
@@ -34,7 +34,7 @@
 #         Added support for use of CIDRs on SRC and DST filters. Thank you Fabio Fidelis for pointing this out.
 #     20/02/2024:
 #         Moved tcpdump to it's own directory tcpdump_daemonset and renamed to tcpdump_ds.yaml
-#         Added support so that you can change the filter operator when both "SRC" and "DST" are set. Accepted values are "or", "OR", "and" and "AND", if empty defaults to "and".
+#         Added support to change the operator when both "SRC" and "DST" are set. Accepted values are "or", "OR", "and" and "AND", if empty defaults to "and".
 #
 # TODO: Add support to filter by interface name on João Pedrosa suggestion. Other suggestions and feedback is welcomed.
 #
