Changelog for 23/02/2024: Added a storageClass with retain on reclaimPolicy to avoid patching PV manually. Thank you Ioan Corcodel for the idea from is own work https://github.com/ioanc/k8s-network-troubleshooting/blob/master/daemonSet-tcpdump-pvc.yaml Added support to filter by HOST, if HST variable is set it will be used to filter the tcpdump with "host" option, SRC and DST variables will be ignored; Improved logic so that IFs aren't required to handle the INT variable per each tcpdump command. Default interface will be "any".

--- a/tcpdump_daemonset/tcpdump_ds.yaml
+++ b/tcpdump_daemonset/tcpdump_ds.yaml
@@ -3,18 +3,20 @@
 #
 # Based on https://github.com/amjadaljunaidi/tcpdump however only using yaml.
 # Improved with features from https://github.com/ioanc/k8s-network-troubleshooting/blob/master/daemonSet-tcpdump-pvc.yaml
-# Using this yaml file will create a configmap, a StorageClass, a PersistentVolumeClaim and a DaemonSet that will run a tcpdump command on each one of your nodes.
-# Key features:
-#               Doesn't require Helm and uses Azure Linux(Mariner) image from Microsoft Artifcat Registry(MCR) that is already cached on AKS nodes;
-#               Should work on more restricted egress AKS clusters since only requires access to Microsoft MCR(mcr.microsoft.com) and Azure Linux Packages(packages.microsoft.com);
-#               A PV/PVC file share will be created on the AKS cluster default storage account that then can be browsed on your cluster managed Resource Group "MC_" using Azure Portal;
-#               Can be customized by changing the variables defined on the ConfigMap to better tailor your requirements.
+# Special thanks to Amjad and Ioan for source materials and ideas.
 #
-# Special thanks to Amjad Aljunaidi and Ioan Corcodel
+# Using this yaml file will create a configmap, a StorageClass, a PersistentVolumeClaim and a DaemonSet that will run a tcpdump command on each one of your nodes.
+#
+# Key features:
+#               Doesn't require Helm and uses Azure Linux(Mariner) image from Microsoft Artifcat Registry(MCR) that is already cached on Azure Linux AKS nodes;
+#               Should work on more restricted egress AKS clusters since only requires access to Microsoft MCR(mcr.microsoft.com) and Azure Linux Packages(packages.microsoft.com);
+#               A PV/PVC file share will be created on the AKS cluster default storage account that then can be browsed on your cluster managed Resource Group "MC_" using Azure Portal.
+#                 If no default storage account exists a new one will be created, please remember to delete it after it no longer being required;
+#               Can be customized by changing the variables defined on the ConfigMap to better tailor your requirements.
 #
 # Default usage:
 #    1) Deploy/Run: kubectl apply -f https://github.com/josecaneira/aks-lab/raw/main/tcpdump_daemonset/tcpdump_ds.yaml
-#    2) Wait for traffic to be collected;
+#    2) Wait for pods do be deployed on nodes and for traffic to be collected;
 #    3) Delete/Stop: kubectl delete -f https://github.com/josecaneira/aks-lab/raw/main/tcpdump_daemonset/tcpdump_ds.yaml
 #    4) Delete the PV:
 #       a) Get the PV name: kubectl get pv|grep tcpdump
@@ -26,7 +28,7 @@
 #    2) Edit the "tcpdump_ds.yaml" file and change the ConfigMap variables or whatever you want
 #    3) Deploy/Run with: kubectl apply -f tcpdump_ds.yaml
 #       OPTIONAL - Deploy/Run using a namespace: kubectl apply -f tcpdump_ds.yaml -n your-namespace
-#    4) Wait for traffic to be collected;
+#    4) Wait for pods do be deployed on nodes and for traffic to be collected;
 #    5) Delete/Stop with: kubectl delete -f tcpdump_ds.yaml
 #       OPTIONAL - Delete/Stop using a namespace: kubectl delete -f tcpdump_ds.yaml -n your-namespace
 #    6) Delete the PV:
