Stripted down version targetting ARO clusters... and default filtering SQL port 1433

--- a/tcpdump_daemonset/tcpdump_ds_aro.yaml
+++ b/tcpdump_daemonset/tcpdump_ds_aro.yaml
@@ -74,6 +74,7 @@ spec:
   accessModes:
   - ReadWriteMany
   storageClassName: tcpdump-retain
+  volumeName: tcpdump
   resources:
     requests:
       storage: 500Gi
